k8s/users-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: aurorachat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: user-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: aurorachat
spec:
  selector:
    app: user-service
  ports:
    - port: 4000
      targetPort: 4000
